[package]
name = "gliss"
version = "0.1.0"
edition = "2018"

[lib]
name = "gliss"
path = "src/lib.rs"
crate-type = ["cdylib"]


[[bin]]
name = "ui"
path = "src/bin.rs"


[dependencies]

baseview = {git = "https://github.com/RustAudio/baseview", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }
egui-baseview = {git = "https://github.com/BillyDM/egui-baseview", rev = "b7436c02309347e49ffd4491bf31cdef6e759eb7" }
egui = "0.15"
emath = "0.15"
epaint = "0.15"

dirs = "4"
log = "0.4"
log-panics = "2"
raw-window-handle = "0.3"
simplelog = "0.11"
vst = "0.2.1"
rtrb = "0.2"
ordered-float = "2.0"
lazy_static = "1.4.0"
rand = "0.8.4"
chrono = "0.4"

itertools = "0.10.2"
